--- a/lighthouseScrape/lighthouseScrape.csproj
+++ b/lighthouseScrape/lighthouseScrape.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="har_export_trigger-0.6.1-an+fx.xpi">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
